update email in vignette
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/exomeCopy@74276 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/doc/exomeCopy.Rnw
+++ b/inst/doc/exomeCopy.Rnw
@@ -21,7 +21,7 @@ options(width = 70)
 
 \title{Copy number variant detection in exome sequencing data using \exomeCopy}
 \author{Michael Love\\
-\texttt{love@molgen.mpg.de}}
+\texttt{michaelisaiahlove@gmail.com}}
 \date{\today}
 
 \maketitle
