Use 'drop.self' argument instead of 'ignoreSelf' when calling findOverlaps() with a query and no subject.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/exomeCopy@113554 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/vignettes/exomeCopy.Rnw
+++ b/vignettes/exomeCopy.Rnw
@@ -338,7 +338,7 @@ To find overlaps within our calls across patients, it helps to convert the \text
 <<>>=
 CNV.segments$strand <- "*"
 CNV.segments.granges <- as(CNV.segments,"GRanges")
-CNV.overlaps.matrix <- as.matrix(findOverlaps(CNV.segments.granges,ignoreSelf=TRUE))
+CNV.overlaps.matrix <- as.matrix(findOverlaps(CNV.segments.granges,drop.self=TRUE))
 head(CNV.overlaps.matrix)
 @ 
 
