--- a/vignettes/exomeCopy.Rnw
+++ b/vignettes/exomeCopy.Rnw
@@ -60,18 +60,18 @@ sample.names <- c("sample1","sample2","sample3")
 reference.file <- "/path/to/reference_genome.fa"
 target.df <- read.delim(target.file, header = FALSE)
 target <- GRanges(seqname = target.df[,1], IRanges(start = target.df[,2] + 1, end = target.df[,3]))
-counts <- RangedData(space = seqnames(target), ranges = ranges(target))
+counts <- target
 for (i in 1:length(bam.files)) {
-  counts[[sample.names[i]]] <- countBamInGRanges(bam.files[i], target)
+  mcols(counts)[[sample.names[i]]] <- countBamInGRanges(bam.files[i], target)
 }
-counts[["GC"]] <- getGCcontent(target, reference.file)
-counts[["GC.sq"]] <- counts$GC^2
-counts[["bg"]] <- generateBackground(sample.names, counts, median)
-counts[["log.bg"]] <- log(counts[["bg"]] + .1)
-counts[["width"]] <- width(counts)
+counts$GC <- getGCcontent(target, reference.file)
+counts$GC.sq <- counts$GC^2
+counts$bg <- generateBackground(sample.names, counts, median)
+counts$log.bg <- log(counts$bg + .1)
+counts$width <- width(counts)
 fit.list <- lapply(sample.names, function(sample.name) {
   lapply(seqlevels(target), function(seq.name) { 
-    exomeCopy(counts[seq.name], sample.name, X.names = c("log.bg", "GC", "GC.sq","width"), S = 0:4, d = 2)
+    exomeCopy(counts[seqnames(counts) == seq.name], sample.name, X.names = c("log.bg", "GC", "GC.sq","width"), S = 0:4, d = 2)
   })
 })
 compiled.segments <- compileCopyCountSegments(fit.list)
@@ -79,9 +79,9 @@ compiled.segments <- compileCopyCountSegments(fit.list)
 
 \section{Importing experiment data}
 
-The necessary genomic range information, sample read counts and positional covariates (background read depth and GC-content) should be stored in a \textit{RangedData} object.  The user must provide genomic ranges of targeted enrichment.  For exome sequencing, one can use exon annotations.  The \exomeCopy package provides the following convenience functions: \texttt{subdivideGRanges} for subdividing the target ranges into nearly-equal sized ranges, \texttt{countBamInGRanges} for counting reads from a BAM file in the target ranges, \texttt{getGCcontent} for calculating GC content in the target ranges, and \texttt{generateBackground} for calculating the median read depth over a set of background samples.
+The necessary genomic range information, sample read counts and positional covariates (background read depth and GC-content) should be stored in a \textit{GRanges} object.  The user must provide genomic ranges of targeted enrichment.  For exome sequencing, one can use exon annotations.  The \exomeCopy package provides the following convenience functions: \texttt{subdivideGRanges} for subdividing the target ranges into nearly-equal sized ranges, \texttt{countBamInGRanges} for counting reads from a BAM file in the target ranges, \texttt{getGCcontent} for calculating GC content in the target ranges, and \texttt{generateBackground} for calculating the median read depth over a set of background samples.
 
-To minimize memory size, we first demonstrate with toy data how to construct a \textit{RangedData} object \texttt{toy.counts} from a BED file describing the targeted region, BAM files for the read mapping and a FASTA file for the reference sequence.  For demonstration of running the main functions, we will use a prepackaged \textit{RangedData} object \texttt{exomecounts} containing real exome sequencing read counts.  We will then simulate CNVs in a \textit{RangedData} object, \texttt{example.counts} and run \texttt{exomeCopy}.
+To minimize memory size, we first demonstrate with toy data how to construct a \textit{GRanges} object \texttt{toy.counts} from a BED file describing the targeted region, BAM files for the read mapping and a FASTA file for the reference sequence.  For demonstration of running the main functions, we will use a prepackaged \textit{GRanges} object \texttt{exomecounts} containing real exome sequencing read counts.  We will then simulate CNVs in a \textit{GRanges} object, \texttt{example.counts} and run \texttt{exomeCopy}.
 
 \subsection{Subdividing targeted regions}
 
@@ -129,10 +129,10 @@ Users should make sure the sequence names in the \textit{GRanges} object are the
 bam.file <- system.file("extdata","mapping.bam",package="exomeCopy")
 scanBamHeader(bam.file)[[1]]$targets
 seqlevels(target.sub)
-toy.counts <- RangedData(space=seqnames(target.sub),ranges=ranges(target.sub))
+toy.counts <- target.sub
 sample.df <- data.frame(samples="sample1",bam.files=bam.file,stringsAsFactors=FALSE)
 for (i in 1:nrow(sample.df)) {
-  toy.counts[[sample.df$samples[i]]] <- countBamInGRanges(sample.df$bam.files[i],target.sub)
+  mcols(toy.counts)[[sample.df$samples[i]]] <- countBamInGRanges(sample.df$bam.files[i],target.sub)
 }
 toy.counts
 @
@@ -142,7 +142,7 @@ toy.counts
 \exomeCopy can model read counts from samples which are not perfectly correlated with background read depth using GC-content (ratio of G and C bases to total number of bases).  The GC-content of DNA fragments is known to be a factor in the efficiency of high-throughput sequencing.  To obtain the GC-content information, we only need the targeted ranges and a reference FASTA file.
 <<>>=
 reference.file <- system.file("extdata","reference.fa",package="exomeCopy")
-toy.counts[["GC"]] <- getGCcontent(target.sub, reference.file)
+toy.counts$GC <- getGCcontent(target.sub, reference.file)
 toy.counts
 @ 
 
@@ -154,8 +154,8 @@ The read counts are taken from exome enriched, paired-end sequencing data of the
 
 <<>>=
 data(exomecounts)
-dim(exomecounts)
-exomecounts[1:5,1:3]
+length(exomecounts)
+head(exomecounts)
 @
 
 The genomic ranges in \texttt{exomecounts} have been filtered such that only ranges with nonzero read count over the 16 samples are retained.  The range of the 1000 genomic ranges is from 0.8 to 7.8 Mb on chromosome 1.  Plotting the counts for one sample in a region of 1 Mb, one can observe both the irregular spacing of the ranges as well as the non-uniformities in read counts per range.
@@ -172,37 +172,33 @@ In order to run \exomeCopy, we first generate background read depth.  For demons
 
 <<>>=
 chr1a <- exomecounts
-chr1a.ranges <- ranges(chr1a)
-names(chr1a.ranges) <- "chr1a"
-chr1a <- RangedData(chr1a.ranges, as.data.frame(exomecounts)[,-c(1:4)])
-# remove some columns added by RangedData()
-chr1a <- chr1a[,colnames(chr1a) %in% colnames(exomecounts)]
-example.counts <- c(exomecounts,chr1a)
+seqlevels(chr1a) <- "chr1a"
+example.counts <- c(exomecounts, chr1a)
 @ 
 
-The background is generated by a simple function which performs 3 simple steps:  1) given a vector of names of samples to be used as background, extract the read counts data frame from the \textit{RangedData} object, 2) divide each sample by its mean read count (column means), 3) calculate the median of these normalized read counts (row medians).  The function can also be used to calculate any function across the rows of normalized read counts.  For example, we also show how to calculate the variance of the normalized read counts, though we will not use covariate in this vignette.  
+The background is generated by a simple function which performs 3 simple steps:  1) given a vector of names of samples to be used as background, extract the read counts data frame from the \textit{GRanges} object, 2) divide each sample by its mean read count (column means), 3) calculate the median of these normalized read counts (row medians).  The function can also be used to calculate any function across the rows of normalized read counts.  For example, we also show how to calculate the variance of the normalized read counts, though we will not use covariate in this vignette.  
 
-Note that if the control set is a mix of males and females, the allosome portion of chrX will be a mixture of copy counts 1 and 2.  In this case, one should created separate \textit{RangedData} objects for chrX and chrY and run males and females separately with the appropriate expected copy count.
+Note that if the control set is a mix of males and females, the allosome portion of chrX will be a mixture of copy counts 1 and 2.  In this case, one should created separate \textit{GRanges} objects for chrX and chrY and run males and females separately with the appropriate expected copy count.
 
 <<>>=
-exome.samples <- grep("HG.+",colnames(example.counts),value=TRUE)
-example.counts[["bg"]] <- generateBackground(exome.samples, example.counts, median)
-example.counts[["log.bg"]] <- log(example.counts[["bg"]] + .1)
-example.counts[["bg.var"]] <- generateBackground(exome.samples, example.counts, var)
+exome.samples <- grep("HG.+",colnames(mcols(example.counts)),value=TRUE)
+example.counts$bg <- generateBackground(exome.samples, example.counts, median)
+example.counts$log.bg <- log(example.counts$bg + .1)
+example.counts$bg.var <- generateBackground(exome.samples, example.counts, var)
 @ 
 
 We have already removed ranges have zero background coverage, but if we had not we could use the following lines.  If there is zero coverage in the control set, this is most likely a region which is difficult to enrich, and we should not try to infer the copy number here.
 
 <<>>=
-summary(example.counts[["bg"]])
-example.counts <- example.counts[example.counts[["bg"]] > 0,]
+summary(example.counts$bg)
+example.counts <- example.counts[example.counts$bg > 0,]
 @ 
 
 The relationship between read counts and GC-content over the ranges varies across protocols and samples.  It can be roughly approximated per sample using second-order polynomial terms of GC-content.  We store the square of GC-content as a new value column.  Other functions of GC-content could be used as well.  We also store the width of the ranges as a value column.
 
 <<>>=
-example.counts[["GC.sq"]] <- example.counts$GC^2
-example.counts[["width"]] <- width(example.counts)
+example.counts$GC.sq <- example.counts$GC^2
+example.counts$width <- width(example.counts)
 @
 
 \section{Introduction of the model}
@@ -256,8 +252,8 @@ cnv.probs <- rep(c(.99,.5,.5,.95),each=2)
 cnv.mult <- rep(c(-1,1),each=4)
 cnv.starts <- rep(c(1,301,601,901),each=2)
 for (i in 1:8) {
-  example.counts[[exome.samples[i]]] <- simulateCNV(example.counts[[exome.samples[i]]],cnv.starts[i]:(cnv.starts[i] + 99),multiply=cnv.mult[i],prob=cnv.probs[i])
-  example.counts[[exome.samples[i]]] <- simulateCNV(example.counts[[exome.samples[i]]],1000 + cnv.starts[i]:(cnv.starts[i] + 99),multiply=cnv.mult[i],prob=cnv.probs[i])
+  mcols(example.counts)[[exome.samples[i]]] <- simulateCNV(mcols(example.counts)[[exome.samples[i]]],cnv.starts[i]:(cnv.starts[i] + 99),multiply=cnv.mult[i],prob=cnv.probs[i])
+  mcols(example.counts)[[exome.samples[i]]] <- simulateCNV(mcols(example.counts)[[exome.samples[i]]],1000 + cnv.starts[i]:(cnv.starts[i] + 99),multiply=cnv.mult[i],prob=cnv.probs[i])
 }
 @ 
 
@@ -268,7 +264,7 @@ for (i in 1:8) {
 We can now run \exomeCopy using the read counts for one of the simulated CNV samples.  Later we will show how to write a simple wrapper function to loop the \texttt{exomeCopy} function over multiple chromosomes and samples.  We specify the possible copy number values with \texttt{S} from 0 to 6 and the expected copy number state with \texttt{d} of 2.
 
 <<>>=
-  fit <- exomeCopy(example.counts["chr1"],sample.name=exome.samples[3],X.names=c("log.bg","GC","GC.sq","width"),S=0:6,d=2)
+  fit <- exomeCopy(example.counts[seqnames(example.counts) == "chr1"],sample.name=exome.samples[3],X.names=c("log.bg","GC","GC.sq","width"),S=0:6,d=2)
   show(fit)
 @
 
@@ -293,7 +289,7 @@ In order to apply \exomeCopy to a full dataset of multiple chromosomes and sampl
 
 <<>>=
 runExomeCopy <- function(sample.name,seqs) {
-  lapply(seqs,function(seq.name) exomeCopy(example.counts[seq.name],sample.name,X.names=c("log.bg","GC","GC.sq","width"),S=0:4,d=2))
+  lapply(seqs,function(seq.name) exomeCopy(example.counts[seqnames(example.counts) == seq.name],sample.name,X.names=c("log.bg","GC","GC.sq","width"),S=0:4,d=2))
 }
 @ 
 
@@ -314,11 +310,11 @@ paste("~",round(time.elapsed / 60 / (8 * sum(width(example.counts))) * 32e6,1),"
 
 \subsection{Compiling results, filtering and plotting CNVs}
 
-Using \texttt{compileCopyCountSegments} on the list of lists, we can compile the segments across samples into a \textit{RangedData} object.  We remove the segments with copy count 2, leaving the predicted CNVs for autosomal ranges.  
+Using \texttt{compileCopyCountSegments} on the list of lists, we can compile the segments across samples into a \textit{GRanges} object.  We remove the segments with copy count 2, leaving the predicted CNVs for autosomal ranges.  
 
 <<>>=
 compiled.segments <- compileCopyCountSegments(fit.list)
-CNV.segments <- compiled.segments[compiled.segments$copy.count != 2,]
+CNV.segments <- compiled.segments[compiled.segments$copy.count != 2]
 @ 
 
 Some non-CNV ranges with too high or low read counts might be predicted to be CNV, despite the use of positional covariates and overdispersion in the emission distributions of the HMM.  Often the majority of these cases can be removed by requiring a minimum number of ranges (for example requiring the \texttt{nranges} column returned by \texttt{copyCountSegments} to be greater than 5).  The filtered CNV segments can be exported to tab-delimited files using \texttt{as.data.frame} and then \texttt{write.table}.
@@ -327,18 +323,16 @@ Some non-CNV ranges with too high or low read counts might be predicted to be CN
 
 \begin{small}
 <<>>=
-CNV.segments[1:6,]
+CNV.segments[1:6]
 table(CNV.segments$nranges)
-CNV.segments <- CNV.segments[CNV.segments$nranges > 5,]
+CNV.segments <- CNV.segments[CNV.segments$nranges > 5]
 @ 
 \end{small}
 
-To find overlaps within our calls across patients, it helps to convert the \textit{RangedData} object into a \textit{GRanges} object.  We can then use \texttt{findOverlaps} to create a matrix of overlaps between our predicted CNVs in different samples.
+To find overlaps within our calls across patients, we can use \texttt{findOverlaps} to create a matrix of overlaps between our predicted CNVs in different samples.
 
 <<>>=
-CNV.segments$strand <- "*"
-CNV.segments.granges <- as(CNV.segments,"GRanges")
-CNV.overlaps.matrix <- as.matrix(findOverlaps(CNV.segments.granges,drop.self=TRUE))
+CNV.overlaps.matrix <- as.matrix(findOverlaps(CNV.segments,drop.self=TRUE))
 head(CNV.overlaps.matrix)
 @ 
 
